--- a/7. Array/7.3 3sum.ipynb
+++ b/7. Array/7.3 3sum.ipynb
@@ -92,6 +92,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 풀이 2. 투 포인터로 합 계산\n",
+    "i를 축으로 하고, 중복된 값을 건너뛰게 하는 부분은 위 풀이와 동일\n",
+    ">**j, k**는 두 수의 합을 구했던 것 처럼 왼쪽, 오른쪽에서 시작하여 합 계산\n",
+    ">- j와 k의 합이 -i와 같게 만들면 됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "def three_sum(nums: List[int]) -> List[List[int]]:\n",
+    "    results = []\n",
+    "    nums.sort()\n",
+    "    \n",
+    "    print(nums)\n",
+    "    \n",
+    "    for i in range(len(nums)-2):\n",
+    "        if i>0 and nums[i-1]==nums[i]:\n",
+    "            continue\n",
+    "                        \n",
+    "        j = i+1\n",
+    "        k = len(nums)-1\n",
+    "        \n",
+    "        while j < k:\n",
+    "            print(nums[i], nums[j], nums[k])\n",
+    "            if nums[j]+nums[k] == -nums[i]:\n",
+    "                results.append([nums[i], nums[j], nums[k]])\n",
+    "                print(\"!\")\n",
+    "                \n",
+    "                while j<k and nums[j]==nums[j+1]:\n",
+    "                    j += 1\n",
+    "                while j<k and nums[k]==nums[k-1]:\n",
+    "                    k -= 1\n",
+    "                j += 1\n",
+    "                k -= 1\n",
+    "                \n",
+    "            elif nums[j]+nums[k] > -nums[i]:\n",
+    "                while j<k and nums[k]==nums[k-1]:\n",
+    "                    k -= 1\n",
+    "                k -= 1\n",
+    "                \n",
+    "            elif nums[j]+nums[k] < -nums[i]:\n",
+    "                while j<k and nums[j]==nums[j+1]:\n",
+    "                    j += 1\n",
+    "                j += 1\n",
+    "    return results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4, -4, -4, -1, -1, -1, -1, -1, -1, 0, 1, 1, 1, 1, 1, 1, 2, 2, 2, 4, 4, 4]\n",
+      "-4 -4 4\n",
+      "-4 -1 4\n",
+      "-4 0 4\n",
+      "!\n",
+      "-4 1 2\n",
+      "-4 2 2\n",
+      "!\n",
+      "-1 -1 4\n",
+      "-1 -1 2\n",
+      "!\n",
+      "-1 0 1\n",
+      "!\n",
+      "0 1 4\n",
+      "0 1 2\n",
+      "0 1 1\n",
+      "1 1 4\n",
+      "1 1 2\n",
+      "1 1 1\n",
+      "2 2 4\n",
+      "2 2 2\n",
+      "4 4 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[-4, 0, 4], [-4, 2, 2], [-1, -1, 2], [-1, 0, 1]]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "three_sum([-1, 0, 1, 1, 1, 1, 2, -1, -1, -1, -1, -4, 1, -1, 1, -4, -4, 4, 4, 4, 2, 2])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
